--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Auto Generated PWA files
+**/public/sw.js
+**/public/workbox-*.js
+
 # dependencies
 /node_modules
 /.pnp
